test_suite5/DRACO/test_suite/draco-pinpoint/passing/pass_write_length_specifier.draco
proc main() void :  write(a:5, a:a); corp;
