test_suite5/DRACO/test_suite/draco-pinpoint/failing/fail_write_wrong_format_specifier.draco
proc main() void :  write(a:z:10); corp;
